# Dave-Sonar-WGPU-

./: .gitignore  README.md  generate_plots.py
dave/gazebo/dave_gz_multibeam_sonar/multibeam_sonar/: CMakeLists.txt  MultibeamSonarSensor.cc  sonar_calculation_sycl.cc  sonar_calculation_sycl.hh  sonar_calculation_wgpu.cc  sonar_calculation_wgpu.hh
dave/gazebo/dave_gz_multibeam_sonar/multibeam_sonar_demo/: CMakeLists.txt
dave/gazebo/dave_gz_multibeam_sonar/multibeam_sonar_system/: CMakeLists.txt
dave/models/dave_sensor_models/config/blueview_p900_bench/: sensor_config.py
dave/models/dave_sensor_models/description/blueview_p900/: model.sdf
dave/models/dave_sensor_models/description/blueview_p900_bench/: model.sdf
dave/models/dave_worlds/worlds/: dave_multibeam_sonar_comprehensive.world  dave_multibeam_sonar_test.world
dave_ws/src/: dave
sonar_wgpu/: Cargo.toml
sonar_wgpu/include/: sonar_wgpu.h
sonar_wgpu/src/: lib.rs
sonar_wgpu/src/shaders/: bluestein_finalize.wgsl  bluestein_prepare.wgsl  fft_twiddle.wgsl  matmul_dual.wgsl  pointwise_mul.wgsl  scatter_sum_fused.wgsl
wgpu_test_run/: SonarRawData_000001.csv  SonarRawData_000007.csv  SonarRawData_000012.csv  SonarRawData_000016.csv  SonarRawData_000021.csv  SonarRawData_000024.csv  SonarRawData_000027.csv  SonarRawData_000033.csv  SonarRawData_000034.csv  SonarRawData_000038.csv  SonarRawData_000044.csv  SonarRawData_000049.csv  SonarRawData_000051.csv  SonarRawData_000055.csv  SonarRawData_000061.csv  SonarRawData_000064.csv  SonarRawData_000066.csv  SonarRawData_000069.csv  SonarRawData_000075.csv  SonarRawData_000077.csv  SonarRawData_000081.csv  SonarRawData_000085.csv  SonarRawData_000091.csv  SonarRawData_000094.csv  SonarRawData_000099.csv  SonarRawData_000100.csv  SonarRawData_000105.csv  SonarRawData_000108.csv  SonarRawData_000112.csv  SonarRawData_000115.csv  SonarRawData_beam_angles.csv  wgpu_30s_test_quality_summary.json  wgpu_30s_test_quality_summary.md
