[package]
name = "sonar_wgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]  # cdylib for C ABI, rlib for Rust tests

[dependencies]
wgpu = "23"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
